# neutron

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig  flake.nix  garnix.yaml  meson.build  meson_options.txt  overlay.nix  pubspec.yaml  sdk.zig  shell.nix  vendor.zig
.github/workflows/: codeql.yml  flawfinder.yml
core/: meson.build
core/docs/: meson.build
core/lib/: build.vala.in  context.vala  provider.vala
core/lib/context/: gmodule.vala  libpeas.vala
displaykit/: CMakeLists.txt.in  README.md  ffigen.yaml  meson.build  pubspec.yaml
displaykit/compositors/: meson.build
displaykit/compositors/wlroots/: meson.build
displaykit/compositors/wlroots/include/neutron/displaykit/compositors/: wlroots-compositor.h
displaykit/compositors/wlroots/protocols/: meson.build
displaykit/compositors/wlroots/src/: wlroots-compositor-priv.h  wlroots-compositor.c
displaykit/docs/: manual.xml.in  meson.build
displaykit/include/neutron/displaykit/: client.h  compositor.h  context.h  input.h  meson.build  output.h  view.h
displaykit/include/neutron/displaykit/input/: keyboard.h  mouse.h
displaykit/lib/: bindings.dart  bindings.yaml  displaykit.dart  meson.build  web.dart
displaykit/src/: client.c  compositor.c  context.c  input.c  output.c  view.c
displaykit/src/input/: keyboard.c  mouse.c
docs/: index.md  manual.xml  manual.xml.in  meson.build
elemental/: CMakeLists.txt.in  README.md  ffigen.yaml  meson.build  pubspec.yaml
elemental/docs/: manual.xml  meson.build
elemental/include/neutron/: elemental.h
elemental/include/neutron/elemental/: argument.h  backtrace.h  build.h.in  common.h  error.h  fs.h  list.h  meson.build  pthread.h  signal.h  string.h  type.h  value.h
elemental/lib/: bindings.dart  bindings.yaml  elemental.dart  meson.build
elemental/src/: argument.c  backtrace.c  build.h  error-priv.h  error.c  fs.c  list.c  signal-priv.h  signal.c  string-priv.h  string.c  type.c
elemental/tests/: meson.build  test-argument.c  test-backtrace.c  test-signal.c  test-string.c  test-type.c  tests.c
example/: pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: CMakeLists.txt  generated_plugins.cmake
example/web/: index.html
flutter_engine/: CMakeLists.txt.in  ffigen.yaml.in  meson.build  pubspec.yaml
flutter_engine/lib/: bindings.dart  bindings.yaml  engine.dart  meson.build
graphics/: CMakeLists.txt.in  README.md  ffigen.yaml  meson.build  pubspec.yaml
graphics/docs/: manual.xml  manual.xml.in  meson.build
graphics/include/neutron/: graphics.h
graphics/include/neutron/graphics/: build.h.in  meson.build  renderer.h  scene-layer.h  scene.h  shader-program.h  shader.h
graphics/lib/: bindings.dart  bindings.yaml  graphics.dart  meson.build  web.dart
graphics/renderers/: meson.build
graphics/renderers/egl/: meson.build
graphics/renderers/egl/include/neutron/graphics/renderer/: egl.h
graphics/renderers/pixman/: meson.build
graphics/renderers/pixman/include/neutron/graphics/renderer/: pixman.h
graphics/renderers/pixman/src/: pixman-renderer-priv.h  pixman-renderer.c
graphics/src/: renderer-priv.h  renderer.c  scene-layer-priv.h  scene-layer.c  scene-priv.h  scene.c  shader-program.c  shader.c
inputcore/: CMakeLists.txt.in  README.md  ffigen.yaml  meson.build  pubspec.yaml
inputcore/docs/: manual.xml  meson.build
inputcore/include/neutron/inputcore/: device.h  keyboard.h  mouse.h  touch.h
inputcore/lib/: bindings.dart  bindings.yaml  inputcore.dart  meson.build  web.dart
inputcore/src/: device.c  keyboard.c  mouse.c  touch.c
linux/: CMakeLists.txt
platform/: CMakeLists.txt.in  ffigen.yaml  meson.build  pubspec.yaml
platform/docs/: manual.xml  manual.xml.in  meson.build
platform/include/neutron/: platform.h
platform/include/neutron/platform/: device-enum.h  device.h  platform.h  process.h  signal.h  thread.h  user.h
platform/include/neutron/platform/device/: enum.h
platform/lib/: bindings.dart  bindings.yaml  meson.build  web.dart
platform/src/: device-enum.c  device.c  platform-priv.h  platform.c  process-priv.h  process.c  thread-priv.h  thread.c  user.c
platform/src/device/: enum.c
platform/targets/: meson.build
platform/targets/dummy/: meson.build
platform/targets/linux/: meson.build
platform/targets/linux/include/neutron/platform/: linux-platform.h  linux-process.h  systemd-device-enum.h  systemd-device.h  udev-device-enum.h
platform/targets/linux/src/: platform.c  process-priv.h  process.c
platform/targets/linux/src/systemd/: device-enum-priv.h  device-enum.c  device-priv.h  device.c
platform/targets/linux/src/udev/: device-enum-priv.h  device-enum.c
platform/tests/: meson.build  test-platform.c  tests.c
po/: POTFILES.in  en.po  meson.build
runtime/: CMakeLists.txt.in  README.md  ffigen.yaml  meson.build  pubspec.yaml
runtime/docs/: manual.xml  meson.build
runtime/include/neutron/runtime/: context.h
runtime/lib/: bindings.dart  bindings.yaml  meson.build  platform.dart  runtime.dart  web.dart
runtime/src/: context-priv.h  context.c
shimmy/: CMakeLists.txt.in  README.md  ffigen.yaml  meson.build  pubspec.yaml
shimmy/docs/: manual.xml  meson.build
shimmy/include/neutron/: shimmy.h
shimmy/lib/: bindings.dart  bindings.yaml  meson.build  native.dart  path.dart.in  shimmy.dart  web.dart
shimmy/src/: registry.c  shimmy.c
shimmy/src/kernel/: dummy.c  linux.c
shimmy/tests/: meson.build  test-shimmy.c
src/: libs.zig  neutron-c.zig  neutron.zig  runner.zig
src/libs/: elemental.zig  graphics.zig
src/libs/elemental/: object.zig  value.zig
src/libs/graphics/: flutter-renderer.zig  renderer.zig  renderers.zig
src/neutron/: displaykit.zig  elemental.zig  flutter.zig  graphics.zig  hardware.zig  logging.zig  runtime.zig
src/neutron/displaykit/: backends.zig  base.zig  client.zig  compositor.zig  context.zig  mock.zig  output.zig  view.zig  wayland.zig  wlroots.zig
src/neutron/elemental/: formatter.zig  ref.zig  trait.zig  type.zig  typed-list.zig
src/neutron/flutter/: method-call.zig  method-channel.zig  (+1 more)
(+92 files in other folders)
