option('git-commit', type: 'string', value: '', description: 'Git commit hash of the source code')
option('git-branch', type: 'string', value: 'master', description: 'Git branch for the source code')
option('build-user', type: 'string', value: 'nobody (nobody@localhost)', description: 'User who build the package')
option('flutter-engine', type: 'string', value: '', description: 'The path to the built Flutter Engine')

option('tests', type: 'feature', value: 'auto', description: 'Build and enable testing')
option('docs', type: 'feature', value: 'auto', description: 'Build and install the documentation')

option('bootstrap', type: 'boolean', value: false, description: 'Perform a bootstrap build')

option('displaykit-compositor-xcb', type: 'feature', value: 'auto', description: 'Builds an X11 compositor using the XCB library')
option('displaykit-compositor-wlroots', type: 'feature', value: 'auto', description: 'Builds a Wayland compositor using the wlroots library')

option('displaykit-client-xcb', type: 'feature', value: 'auto', description: 'Builds an X11 client using the XCB library')

option('graphics-renderer-egl', type: 'feature', value: 'auto', description: 'Build the EGL renderer for the graphics API')
option('graphics-renderer-pixman', type: 'feature', value: 'auto', description: 'Build the Pixman renderer for the graphics API')
